[gd_scene load_steps=9 format=2]

[ext_resource path="res://rooms/Client.png" type="Texture" id=1]
[ext_resource path="res://rooms/OrederArea.png" type="Texture" id=2]
[ext_resource path="res://rooms/Client.gd" type="Script" id=3]
[ext_resource path="res://rooms/ClientColorIndicator.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.00001
height = 16.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.00001
height = 9.99999

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Frame:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Frame:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Client" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 3 )

[node name="TransactionArea" type="Area2D" parent="."]
position = Vector2( 0, 6 )
collision_layer = 32
collision_mask = 4

[node name="AreaSprite" type="Sprite" parent="TransactionArea"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 0, 16 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransactionArea"]
position = Vector2( 0, 17 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="Client" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="ColorIndicator" type="Node2D" parent="."]
show_behind_parent = true
position = Vector2( -29, -42 )

[node name="Inside" type="Sprite" parent="ColorIndicator"]
position = Vector2( -3, -3 )
texture = ExtResource( 4 )
hframes = 4
frame = 3

[node name="Frame" type="Sprite" parent="ColorIndicator"]
texture = ExtResource( 4 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorIndicator"]
autoplay = "Idle"
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
